--- a/index.html
+++ b/index.html
@@ -3,131 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Портфолио BeMan</title>
+    <title>BeMan's Professional Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
-            background-color: #1e1e1e;
-            color: #fff;
+            background-color: #f4f4f4;
+            color: #333;
         }
         header {
-            background: linear-gradient(135deg, #ff5f6d, #ffc3a0);
-            padding: 50px;
+            background: #333;
+            color: #fff;
+            padding: 20px 0;
             text-align: center;
-            box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
-            position: relative;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
         }
         header h1 {
-            font-size: 4rem;
             margin: 0;
-            animation: fadeIn 1s ease-out;
+            font-size: 2.5rem;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1.2rem;
         }
         .section {
-            padding: 100px 0;
+            padding: 50px 0;
             text-align: center;
-        }
-        .fade-in {
-            opacity: 0;
-            animation: fadeIn 1s forwards;
+            background-color: #fff;
+            margin: 20px 0;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
         }
         .projects, .skills {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
             gap: 30px;
+            padding: 20px;
         }
         .project-card, .skill-card {
-            background-color: #333;
+            background-color: #fafafa;
             padding: 20px;
             width: 250px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s;
         }
         .project-card:hover, .skill-card:hover {
             transform: scale(1.05);
         }
         .button {
-            background-color: #ff5f6d;
+            background-color: #333;
             padding: 10px 30px;
             color: white;
             text-decoration: none;
             border-radius: 5px;
-            font-size: 1.2rem;
+            font-size: 1rem;
             transition: background-color 0.3s;
         }
         .button:hover {
-            background-color: #ffc3a0;
+            background-color: #555;
         }
-        @keyframes fadeIn {
-            to {
-                opacity: 1;
-            }
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px;
+            position: relative;
         }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Привет, я BeMan — эксперт в области кибербезопасности</h1>
-        <p>Меня зовут BeMan, и я создаю решения для защиты данных и информации. Ознакомьтесь с моими проектами и навыками!</p>
+        <h1>BeMan's Professional Portfolio</h1>
+        <nav>
+            <a href="#projects">Projects</a>
+            <a href="#skills">Skills</a>
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
 
-    <section class="section fade-in">
-        <h2>Мои проекты</h2>
+    <section id="projects" class="section">
+        <h2>My Projects</h2>
         <div class="projects">
-            <div class="project-card fade-in">
-                <h3>Проект 1</h3>
-                <p>Описание проекта, цели и достижения.</p>
+            <div class="project-card">
+                <h3>Project 1</h3>
+                <p>Project description, goals, and achievements.</p>
             </div>
-            <div class="project-card fade-in">
-                <h3>Проект 2</h3>
-                <p>Описание проекта, цели и достижения.</p>
+            <div class="project-card">
+                <h3>Project 2</h3>
+                <p>Project description, goals, and achievements.</p>
             </div>
-            <div class="project-card fade-in">
-                <h3>Проект 3</h3>
-                <p>Описание проекта, цели и достижения.</p>
+            <div class="project-card">
+                <h3>Project 3</h3>
+                <p>Project description, goals, and achievements.</p>
             </div>
         </div>
     </section>
 
-    <section class="section fade-in">
-        <h2>Мои навыки</h2>
+    <section id="skills" class="section">
+        <h2>My Skills</h2>
         <div class="skills">
-            <div class="skill-card fade-in">
+            <div class="skill-card">
                 <h3>Python</h3>
-                <p>Опыт в создании скриптов для тестирования безопасности.</p>
+                <p>Experience in creating scripts for security testing.</p>
             </div>
-            <div class="skill-card fade-in">
-                <h3>Веб-разработка</h3>
-                <p>Проектирование интерфейсов и создание динамичных приложений.</p>
+            <div class="skill-card">
+                <h3>Web Development</h3>
+                <p>Designing interfaces and creating dynamic applications.</p>
             </div>
-            <div class="skill-card fade-in">
-                <h3>Цифровая безопасность</h3>
-                <p>Анализ уязвимостей и защита данных.</p>
+            <div class="skill-card">
+                <h3>Digital Security</h3>
+                <p>Vulnerability analysis and data protection.</p>
             </div>
         </div>
     </section>
 
-    <section class="section">
-        <h2>Контакт</h2>
-        <a href="mailto:someone@example.com" class="button">Связаться со мной</a>
+    <section id="contact" class="section">
+        <h2>Contact</h2>
+        <a href="mailto:someone@example.com" class="button">Contact Me</a>
     </section>
 
-    <script>
-        window.addEventListener('scroll', () => {
-            const fadeElements = document.querySelectorAll('.fade-in');
-            fadeElements.forEach(element => {
-                const rect = element.getBoundingClientRect();
-                if (rect.top < window.innerHeight) {
-                    element.style.opacity = 1;
-                }
-            });
-        });
-    </script>
+    <footer>
+        <p>&copy; 2025 BeMan. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
