--- a/index.html
+++ b/index.html
@@ -1,140 +1,22 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BeMan's Professional Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2.5rem;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-        }
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 1.2rem;
-        }
-        .section {
-            padding: 50px 0;
-            text-align: center;
-            background-color: #fff;
-            margin: 20px 0;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-        }
-        .projects, .skills {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 30px;
-            padding: 20px;
-        }
-        .project-card, .skill-card {
-            background-color: #fafafa;
-            padding: 20px;
-            width: 250px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s;
-        }
-        .project-card:hover, .skill-card:hover {
-            transform: scale(1.05);
-        }
-        .button {
-            background-color: #333;
-            padding: 10px 30px;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            transition: background-color 0.3s;
-        }
-        .button:hover {
-            background-color: #555;
-        }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            position: relative;
-        }
-    </style>
+  <title>Test XSS Site</title>
 </head>
 <body>
+  <h1>Введите сообщение</h1>
+  <form action="/echo" method="GET">
+    <input type="text" name="msg">
+    <button type="submit">Отправить</button>
+  </form>
 
-    <header>
-        <h1>BeMan's Professional Portfolio</h1>
-        <nav>
-            <a href="#projects">Projects</a>
-            <a href="#skills">Skills</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-
-    <section id="projects" class="section">
-        <h2>My Projects</h2>
-        <div class="projects">
-            <div class="project-card">
-                <h3>Project 1</h3>
-                <p>Project description, goals, and achievements.</p>
-            </div>
-            <div class="project-card">
-                <h3>Project 2</h3>
-                <p>Project description, goals, and achievements.</p>
-            </div>
-            <div class="project-card">
-                <h3>Project 3</h3>
-                <p>Project description, goals, and achievements.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="skills" class="section">
-        <h2>My Skills</h2>
-        <div class="skills">
-            <div class="skill-card">
-                <h3>Python</h3>
-                <p>Experience in creating scripts for security testing.</p>
-            </div>
-            <div class="skill-card">
-                <h3>Web Development</h3>
-                <p>Designing interfaces and creating dynamic applications.</p>
-            </div>
-            <div class="skill-card">
-                <h3>Digital Security</h3>
-                <p>Vulnerability analysis and data protection.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact" class="section">
-        <h2>Contact</h2>
-        <a href="mailto:someone@example.com" class="button">Contact Me</a>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 BeMan. All rights reserved.</p>
-    </footer>
-
+  <p>Результат:</p>
+  <div id="result">
+    <script>
+      const params = new URLSearchParams(window.location.search);
+      document.write(params.get('msg'));
+    </script>
+  </div>
 </body>
 </html>
