--- a/index.html
+++ b/index.html
@@ -2,44 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to MySite</title>
+  <title>Warning!</title>
   <style>
-    body {
-      font-family: sans-serif;
-      background: #111;
-      color: #eee;
-      padding: 30px;
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: black;
+      overflow: hidden;
     }
-    input, button {
-      padding: 10px;
-      margin-top: 10px;
-      background: #222;
-      color: #fff;
-      border: 1px solid #555;
+    video {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
     }
-    #result {
-      margin-top: 20px;
-      background: #222;
-      padding: 15px;
+    .shake {
+      animation: shake 0.1s infinite;
+    }
+    @keyframes shake {
+      0% { transform: translate(1px, 1px) rotate(0deg); }
+      20% { transform: translate(-1px, -2px) rotate(-1deg); }
+      40% { transform: translate(-3px, 0px) rotate(1deg); }
+      60% { transform: translate(3px, 2px) rotate(0deg); }
+      80% { transform: translate(1px, -1px) rotate(1deg); }
+      100% { transform: translate(-1px, 2px) rotate(-1deg); }
     }
   </style>
 </head>
 <body>
-  <h1>Оставь сообщение</h1>
-  <form id="form">
-    <input type="text" id="msg" placeholder="Напиши что-нибудь">
-    <button type="submit">Отправить</button>
-  </form>
-
-  <div id="result"></div>
+  <video id="scaryVideo" autoplay muted loop></video>
 
   <script>
-    document.getElementById("form").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const msg = document.getElementById("msg").value;
-      // Уязвимость: вставка без фильтрации
-      document.getElementById("result").innerHTML = msg;
-    });
+    const video = document.getElementById('scaryVideo');
+    video.src = "https://www.myinstants.com/media/sounds/the-screaming-sheep.mp3"; // можно заменить на видео
+    video.muted = false;
+
+    document.body.classList.add('shake');
+
+    // Optional: бесконечный alert (может зависнуть вкладка)
+    setInterval(() => {
+      alert("ВЫ ДОЛЖНЫ СМОТРЕТЬ!");
+    }, 8000);
   </script>
 </body>
 </html>
