--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <script>
     const video = document.getElementById('scaryVideo');
-    video.src = "https://www.myinstants.com/media/sounds/the-screaming-sheep.mp3"; // можно заменить на видео
+      video.src = "https://rutube.ru/plst/386307/"; 
     video.muted = false;
 
     document.body.classList.add('shake');
