--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <script>
     const video = document.getElementById('scaryVideo');
-      video.src = "https://rutube.ru/plst/386307/"; 
+      video.src = "https://images.app.goo.gl/SgzR9d5XFK7DQFiD8"; 
     video.muted = false;
 
     document.body.classList.add('shake');
