--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 
   <script>
     const video = document.getElementById('scaryVideo');
-      video.src = "https://images.app.goo.gl/SgzR9d5XFK7DQFiD8"; 
-    video.muted = false;
+    // Указываем ссылку на видео (можно использовать свой файл или ссылку с YouTube)
+    video.src = "https://www.w3schools.com/html/movie.mp4"; // Замени на URL твоего видео
+    video.muted = false; // Для звука, если нужно
 
     document.body.classList.add('shake');
 
